--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,14 @@
     padding:0;
     box-sizing:border-box;
 }
+/* Body Css*/
 body {
     background-image: url("images/body-back.webp");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
 }
+/* Logo Header Css Starts*/
 .main-header{
     display:flex;
     align-items: center;
@@ -52,6 +54,9 @@ body {
     color: white;
     cursor: pointer;
 }
+/* Logo Header Css End*/
+
+/* Navigation Bar CSS Start*/
 .main-navbar{
     display: flex;
     justify-content: space-between;
@@ -111,6 +116,7 @@ body {
     margin-right:20px;
 
 }
+/* MouseOver Section Css*/
 .ul_links li {
     margin: 0;
     padding: 0;
@@ -143,6 +149,121 @@ body {
     background: #DE9292;
     color: #FFF;
 }
+/*cart icon Css Start*/
+#cart-icon {
+    font-size: 30px;
+    margin-right: 40px;
+    cursor: pointer;
+}
+
+.cart {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 360px;
+    min-height: 100%;
+    padding: 20px;
+    background-color: #FFF;
+    border: 2px solid green;
+    border-radius: 20px;
+
+
+}
+.cart.active {
+    right: 0;
+}
+
+.cart-title {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 600;
+    margin-top: 40px;
+}
+
+.cart-box {
+    display: grid;
+    grid-template-columns: 32% 50% 18%;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.cart-img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    padding: 10px;
+}
+
+.detail-box {
+    display: grid;
+    row-gap: 0.5rem;
+}
+
+.cart-product-title {
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+
+.cart-price {
+    font-weight: 500;
+}
+
+.cart-quantity {
+    border: 1px solid black;
+    outline-color: orangered;
+    width: 60px;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.cart-remove {
+    font-size: 34px;
+    color: orangered;
+    cursor: pointer;
+}
+
+.total {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1rem;
+    border-top: 1px solid black;
+
+}
+
+.total-title {
+    font-size: 1rem;
+    font-weight: 600;
+
+}
+
+.total-price {
+    margin-left: 0.5rem;
+}
+
+.btn-buy {
+
+    cursor: pointer;
+}
+
+.btn-buy:hover {
+    background-color: orangered;
+    border: 1px solid orange;
+    border-radius: 30px;
+}
+
+#close-cart {
+    position: absolute;
+    top: 1rem;
+    right: 0.8rem;
+    font-size: 2rem;
+    color: red;
+    cursor: pointer;
+}
+/* cart CSS End*/
+/* Navigation Bar CSs End*/
+
+/* Products List and ImageSlider Section CSS Start*/ 
 .first-section {
     border: 2px solid rgb(161, 155, 155);
     margin: 30px;
@@ -158,16 +279,13 @@ body {
     padding: 10px;
 
 }
-
 .product-list {
     margin-left: 20px;
     padding-top: 30px;
 }
-
 .product-list ul {
     list-style: none;
 }
-
 .product-list ul li::before {
     content: "\2022";
     color: red;
@@ -175,18 +293,14 @@ body {
     display: inline-block;
     width: 1em;
     margin-top: 15px;
-
 }
-
 .products {
     text-transform: uppercase;
 }
 .image-slider {
     margin-top: 20px;
     margin-left: 20px;
-   
-
-}
+   }
 .slide{
     border-radius: 15px;
     max-width:100%;
@@ -194,6 +308,9 @@ body {
     height:400px;
     border:5px solid green;
 }
+/*product list and image Slider Section End*/
+
+/*Features Section CSS Start*/
 .features{
     text-align: center;
     margin-bottom: 30px;
@@ -246,6 +363,9 @@ body {
    color:orangered;
    font-weight: bold;
 }
+/* Features Section Css Ends*/
+
+/* Products Display Section CSS Start*/ 
 .pro-dis {
     text-align: center;
     margin-bottom: 30px;
@@ -261,6 +381,7 @@ body {
     border-radius: 20px;
     font-family: cursive;
 }
+/* Vegetable Display*/
 .veg-text {
     margin: 10px 30px;
     color: green;
@@ -274,49 +395,7 @@ body {
     margin-top: 50px;
 
 }
-.item {
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-top: 20px;
-    border: 3px solid rgb(151, 148, 148);
-    margin-right: 20px;
-    background-color: white;
-    border-radius: 10px;
-}
-.item:hover{
-    border:3px solid orangered;
-}
-.item img{
-   max-width:100%;
-   
-}
-
-.item p {
-    text-align: center;
-    text-transform: uppercase;
-    padding-top: 10px;
-}
-
-.addCart {
-    width:150px;
-    margin-left:10px;
-    margin-top:20px;
-    margin-bottom:20px;
-    font-size:15px;
-    padding:10px;
-    cursor:pointer;
-    border-radius: 10px;
-    color:orangered;
-    font-weight: bold;
-   text-transform: uppercase;
-   background-color: white;
-
-}
-
-.addCart:hover {
-    background-color: orangered;
-    color: white;
-}
+/* Fruits Display CSS*/
 .fruit-text {
     margin: 30px 30px;
     color: green;
@@ -330,6 +409,7 @@ body {
     margin-top: 50px;
 
 }
+/*DryFruits Display */
 .dryfruit-text {
     margin: 30px 30px;
     color: green;
@@ -343,6 +423,53 @@ body {
     margin-top: 50px;
 
 }
+/* Products Display div CSS*/
+.item {
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 20px;
+    border: 3px solid rgb(151, 148, 148);
+    margin-right: 20px;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.item:hover {
+    border: 3px solid orangered;
+}
+
+.item img {
+    max-width: 100%;
+
+}
+
+.item p {
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 10px;
+}
+/* Add to Cart Button CSS*/
+.addCart {
+    width: 150px;
+    margin-left: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 15px;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 10px;
+    color: orangered;
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: white;
+
+}
+
+.addCart:hover {
+    background-color: orangered;
+    color: white;
+}
+/* Deals Section CSS*/ 
 .deal{
     border:3px solid rgb(151, 148, 148);
     margin:20px;
@@ -394,6 +521,7 @@ body {
     height:60px;
     color:orangered;
 }
+/* check the Deal button CSS*/
 .btn{
     cursor:pointer;
     width:30%;
@@ -406,6 +534,7 @@ body {
     border-radius: 10px;
     box-shadow: white;
 }
+/*Contact Section CSS*/
 .contacts{
     width:100%;
     margin-top:20px;
@@ -468,6 +597,7 @@ textarea{
     text-transform: uppercase;
     border-radius: 10px;
 }
+/*Footer Section Css*/
 .footer {
     display: flex;
     align-items: center;
@@ -524,102 +654,9 @@ textarea{
     margin-top:20px;
     font-weight: bold;
 }
-#cart-icon{
-    font-size:30px;
-    margin-right:40px;
-    cursor: pointer;
-}
-.cart{
-    position: fixed;
-    top:0;
-    right:-100%;
-    width:360px;
-    min-height: 100%;
-    padding: 20px;
-    background-color: #FFF;
-    border:2px solid green;
-    border-radius: 20px;
-   
-    
-}
-.cart.active{
-    right:0;
-}
-.cart-title{
-    text-align: center;
-    font-size: 30px;
-    font-weight: 600;
-    margin-top:40px;
-}
-.cart-box{
-    display: grid;
-    grid-template-columns: 32% 50% 18%;
-    align-items: center;
-    gap: 1rem;
-    margin-top:1rem;
-}
-.cart-img{
-    width:100px;
-    height:100px;
-    object-fit: contain;
-    padding:10px;
-}
-.detail-box{
-    display: grid;
-    row-gap: 0.5rem;
-}
-.cart-product-title{
-    font-size: 1rem;
-    text-transform: uppercase;
-}
-.cart-price{
-    font-weight: 500;
-}
-.cart-quantity{
-    border:1px solid black;
-    outline-color: orangered;
-    width:60px;
-    text-align: center;
-    font-size: 1rem;
-}
-.cart-remove{
-    font-size: 34px;
-    color:orangered;
-    cursor:pointer;
-}
-.total{
-    display:flex;
-    justify-content: flex-end;
-    margin-top:1rem;
-    border-top:1px solid black;
-
-}
-.total-title{
-    font-size: 1rem;
-    font-weight: 600;
-
-}
-.total-price{
-    margin-left: 0.5rem;
-}
-.btn-buy{
-  
-    cursor:pointer;
-}
-.btn-buy:hover{
-    background-color: orangered;
-    border:1px solid orange;
-    border-radius: 30px;
-}
-#close-cart{
-    position: absolute;
-    top:1rem;
-    right:0.8rem;
-    font-size: 2rem;
-    color:red;
-    cursor:pointer;
-}
+/*media Query  CSS Start for Responsive Web Page*/ 
 @media screen and (max-width:950px){
+    /*Header CSS*/
     .main-header {
         width:100%;
         height: 170px;
@@ -667,6 +704,7 @@ textarea{
         cursor: pointer;
         border-radius:10px;
     }
+    /* Navbar Css*/
     .main-navbar {
         display: flex;
         justify-content:space-evenly;
@@ -698,9 +736,6 @@ textarea{
         cursor: pointer;
         display: block;
     }
-       
-    
-  
     .buttons-navbar {
         display: flex;
         align-items: center;
@@ -710,10 +745,10 @@ textarea{
         background-color: transparent;
         border: none;
         color: black;
-        
         margin-right:20px;
         
     }
+    /* image slider section Css*/
     .first-section {
         border: 2px solid rgb(161, 155, 155);
         margin-left: 15px;
@@ -746,6 +781,7 @@ textarea{
     .products {
         text-transform: lowercase;
     }
+    /*features Section Css*/
     .features-section {
         display: flex;
         flex-direction: column;
@@ -765,6 +801,7 @@ textarea{
         color: orangered;
         font-weight: bold;
     }
+    /*products Display*/
     .veg-text {
         margin-left: 30px;
         color: green;
@@ -829,6 +866,7 @@ textarea{
         width: 50%;
     
     }
+    /*Deals Section CSS*/
     .deal {
         border: 3px solid rgb(151, 148, 148);
         margin-left: 10px;
@@ -889,6 +927,7 @@ textarea{
     border-radius: 10px;
     box-shadow: white;
 }
+/*contact Css Start*/
 .contacts {
     width: 100%;
     margin-top: 20px;
@@ -959,6 +998,7 @@ textarea {
     text-transform: lowercase;
     border-radius: 10px;
 }
+/*footer Css Start*/
 .footer {
     display: flex;
     align-items: flex-start;
@@ -990,37 +1030,27 @@ textarea {
    margin-left:0px;
     font-size:20px;
     display:flex;
-    
- 
-   
-
 }
-
 .social-icons a {
     text-decoration: none;
     color: white;
     border: 2px solid orangered;
     padding: 5px;
     border-radius: 20px;
-   
 }
-
 .social-icons a:hover {
     border: 1px solid transparent;
 }
 .footer-links h3 {
     margin-left: 10px;
     color: white;
-   
     margin-top: 10px;
     margin-right: 10px;
 }
-
 .footer-links ul li {
     list-style-type: none;
     margin-top: 10px;
 }
-
 .footer-links ul li a {
     text-decoration: none;
     text-transform: lowercase;
@@ -1029,6 +1059,7 @@ textarea {
     margin-top: 10px;
     font-weight: bold;
 }
+/*cart CSS Start*/
 .cart {
     position: fixed;
     top: 20%;
@@ -1039,10 +1070,7 @@ textarea {
     background-color: #FFF;
     border: 1px solid green;
     border-radius: 10px;
-
-
 }
-
 .cart.active {
     right: 0;
 }
@@ -1052,7 +1080,6 @@ textarea {
     font-weight: 400;
     margin-top: 20px;
 }
-
 .cart-box {
     display: grid;
     grid-template-columns: 22% 30% 10%;
